Add nav content

--- a/css/main.css
+++ b/css/main.css
@@ -15,11 +15,17 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  font-family: 'Spartan', sans-serif;
+  background-color: #EEE;
 }
 
 header {
   display: block;
 
+}
+
+nav ul {
+  white-space: nowrap;
 }
 
 nav li {
@@ -31,6 +37,19 @@ nav li {
 ul, li {
   margin: 0;
   padding: 0;
+}
+
+.banner-image {
+  position: absolute;
+  top: 5.5rem;
+  left: 2rem;
+  right: 2rem;
+  bottom: 2rem;
+}
+
+footer {
+  display: block;
+  background-color: #EEE;
 }
 
 @media only screen and (min-width: 38em) {
