--- a/css/main.css
+++ b/css/main.css
@@ -32,15 +32,26 @@ header {
   display: block;
 }
 
+nav {
+  text-align: left;
+  top: 0;
+  left: 0;
+}
+
+.header-nav-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  height: 5.7rem;
+}
+
 .header-nav {
   position: absolute;
   top: 2rem;
   left: 2rem;
   right: 2rem;
-}
-
-nav {
-  display: block;
 }
 
 nav li {
@@ -61,12 +72,32 @@ a:hover {
   color: #676767;
 }
 
-.banner-image {
+.banner-title {
   position: absolute;
-  top: 5.5rem;
+  top: 2rem;
   left: 2rem;
-  right: 2rem;
-  bottom: 2rem;
+  width: 100%;
+  z-index: 101;
+}
+
+.image-bg {
+  padding-top: 1rem;
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+}
+.image-bg img {
+  position:absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-width: 50%;
+  min-height: 50%;
+  opacity: 65%;
 }
 
 section {
@@ -76,17 +107,37 @@ section {
 }
 
 footer {
-  display: block;
-  background-color: #0f0f0f;
+  bottom: 0;
+  width: 100%;
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 999999999;
+  height: 75px;
+  background-color: #0f0f0f;
+}
+footer ul.footerleft{
+  text-align: center;
+  margin-top: 15px;
+}
+footer ul.footerleft li{
+  display: inline;
 }
 
-.footer-nav {
+footer a{
+  color: #EEE;
+  margin-left: 1rem;
+}
 
+footer a:hover{
+  color: #676767;
+  text-decoration: none;
+}
+
+.footer-bottom{
+	width: 100%;
+	padding: 10px 0;
+	text-align: center;
+	color: #EEE;
+	background: #0f0f0f);
+  font-size: 12px;
 }
 
 @media only screen and (min-width: 38em) {
